--- a/Deep_Learning/6_Twitter_Sentiment_Predictor_using_LSTM/Twitter_Sentiment_Predictor_using_LSTM.ipynb
+++ b/Deep_Learning/6_Twitter_Sentiment_Predictor_using_LSTM/Twitter_Sentiment_Predictor_using_LSTM.ipynb
@@ -917,40 +917,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From e:\\Apps\\Anaconda\\envs\\directml\\lib\\site-packages\\tensorflow_core\\python\\keras\\initializers.py:119: calling RandomUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From e:\\Apps\\Anaconda\\envs\\directmltest\\lib\\site-packages\\tensorflow_core\\python\\keras\\initializers.py:119: calling RandomUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From e:\\Apps\\Anaconda\\envs\\directml\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From e:\\Apps\\Anaconda\\envs\\directmltest\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "If using Keras pass *_constraint arguments to layers.\n",
-      "WARNING:tensorflow:From e:\\Apps\\Anaconda\\envs\\directml\\lib\\site-packages\\tensorflow_core\\python\\ops\\math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From e:\\Apps\\Anaconda\\envs\\directmltest\\lib\\site-packages\\tensorflow_core\\python\\ops\\math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
       "Train on 11096 samples, validate on 2775 samples\n",
       "Epoch 1/40\n",
-      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.8696 - acc: 0.6260 - val_loss: 0.7790 - val_acc: 0.6537\n",
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.8662 - acc: 0.6252 - val_loss: 0.7801 - val_acc: 0.6659\n",
       "Epoch 2/40\n",
-      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.6932 - acc: 0.6975 - val_loss: 0.7581 - val_acc: 0.6739\n",
+      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.6926 - acc: 0.6964 - val_loss: 0.7649 - val_acc: 0.6652\n",
       "Epoch 3/40\n",
-      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.5792 - acc: 0.7638 - val_loss: 0.7640 - val_acc: 0.6732\n",
+      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.5649 - acc: 0.7688 - val_loss: 0.8049 - val_acc: 0.6505\n",
       "Epoch 4/40\n",
-      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.4706 - acc: 0.8143 - val_loss: 0.8230 - val_acc: 0.6620\n",
+      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.4454 - acc: 0.8299 - val_loss: 0.8743 - val_acc: 0.6602\n",
       "Epoch 5/40\n",
-      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.3764 - acc: 0.8624 - val_loss: 0.8974 - val_acc: 0.6717\n",
+      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.3617 - acc: 0.8660 - val_loss: 0.9707 - val_acc: 0.6523\n",
       "Epoch 6/40\n",
-      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.3159 - acc: 0.8862 - val_loss: 0.9542 - val_acc: 0.6497\n",
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.3043 - acc: 0.8885 - val_loss: 1.0300 - val_acc: 0.6595\n",
       "Epoch 7/40\n",
-      "11096/11096 [==============================] - 13s 1ms/sample - loss: 0.2722 - acc: 0.8998 - val_loss: 1.0691 - val_acc: 0.6541\n",
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2740 - acc: 0.8992 - val_loss: 1.1318 - val_acc: 0.6342\n",
       "Epoch 8/40\n",
-      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2499 - acc: 0.9078 - val_loss: 1.1306 - val_acc: 0.6494\n",
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2436 - acc: 0.9107 - val_loss: 1.1810 - val_acc: 0.6378\n",
       "Epoch 9/40\n",
-      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2243 - acc: 0.9184 - val_loss: 1.2532 - val_acc: 0.6591\n",
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2333 - acc: 0.9153 - val_loss: 1.1849 - val_acc: 0.6346\n",
       "Epoch 10/40\n",
-      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2118 - acc: 0.9235 - val_loss: 1.2123 - val_acc: 0.6584\n",
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2143 - acc: 0.9235 - val_loss: 1.2189 - val_acc: 0.6411\n",
       "Epoch 11/40\n",
-      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.1992 - acc: 0.9269 - val_loss: 1.3546 - val_acc: 0.6472\n",
-      "Epoch 12/40\n",
-      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.1896 - acc: 0.9298 - val_loss: 1.3632 - val_acc: 0.6544\n"
+      "11096/11096 [==============================] - 14s 1ms/sample - loss: 0.2064 - acc: 0.9244 - val_loss: 1.2623 - val_acc: 0.6418\n"
      ]
     }
    ],
@@ -984,8 +982,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2775/2775 [==============================] - 1s 223us/sample - loss: 0.7581 - acc: 0.6739\n",
-      "Final Validation Accuracy: 0.6739 and Final Validation Loss: 0.7581\n"
+      "2775/2775 [==============================] - 1s 227us/sample - loss: 0.7801 - acc: 0.6659\n",
+      "Final Validation Accuracy: 0.6659 and Final Validation Loss: 0.7801\n"
      ]
     }
    ],
